[package]
name = "blinds"
version = "0.1.0"
authors = ["Ryan Goldstein <ryan@ryanisaacg.com>"]
edition = "2018"

[features]
default = ["gamepad"]

gamepad = ["gilrs"]
gl = ["glow", "glutin"]
stdweb = ["winit/stdweb", "glow/stdweb"]
web-sys = ["winit/web-sys", "glow/web-sys"]

[dependencies]
futures-core-preview = { version = "0.3.0-alpha.17", default-features = false }
futures-util-preview = { version = "0.3.0-alpha.17", default-features = false }
futures-executor-preview = { version = "0.3.0-alpha.17", default-features = false, features = ["std"] }
glow = { version = "0.3.0-alpha3", optional = true }
glutin = { version = "0.22.0-alpha3", optional = true }
gilrs = { version = "0.7", optional = true }
mint = "0.5"
winit = "0.20.0-alpha4"

