[package]
name = "blinds"
description = "Wrap an abstraction over a window"
version = "0.1.2"
authors = ["Ryan Goldstein <ryan@ryanisaacg.com>"]
categories = ["game-development", "web-programming"]
keywords = ["async", "window"]
license = "MIT/Apache-2.0"
edition = "2018"
readme = "README.md"
repository = "https://github.com/ryanisaacg/blinds"

[package.metadata.docs.rs]
features = ["event-cache", "favicon", "gamepad"]

[features]
default = ["favicon", "gamepad"]

event-cache = ["enum-map", "rustc-hash"]
favicon = ["image"]
gamepad = ["gilrs"]
gl = ["glow", "glutin"]
stdweb = ["std_web", "webgl_stdweb", "winit/stdweb", "glow/stdweb"]
web-sys = ["wasm-bindgen", "web_sys", "winit/web-sys", "glow/web-sys"]

[dependencies]
enum-map = { version = "0.6.2", default-features = false, optional = true }
futures-util = { version = "0.3.1", default-features = false }
futures-executor = { version = "0.3.1", default-features = false, features = ["std"] }
glow = { version = "0.4.0", default-features = false, optional = true }
gilrs = { version = "0.7", optional = true }
image = { version = "0.22.3", optional = true, default-features = false }
mint = "0.5"
rustc-hash = { version = "1.0", optional = true }
std_web = { version = "0.4.20", package = "stdweb", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
webgl_stdweb = { version = "0.3.0", optional = true }
web_sys = { version = "0.3.22", package = "web-sys", optional = true, features = ["HtmlHeadElement"] }
winit = "0.20.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
glutin = { version = "0.22", optional = true }

[[example]]
name = "cache"
required-features = ["event-cache"]
